new gallery site

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -62,6 +62,16 @@ title: "UserFrosting | Gallery"
                     <img src="{{site.url}}/img/gallery/gallery-2.png" class="img-responsive" alt="Quiz Evolved: The easy way for teachers to share questions with students.">
                 </a>
             </div>
+            <div class="col-sm-4 portfolio-item">
+                <a href="http://safetymessaging.net/" rel="nofollow" class="portfolio-link">
+                    <div class="caption">
+                        <div class="caption-content">
+                            4RP Safety Messaging
+                        </div>
+                    </div>
+                    <img src="{{site.url}}/img/gallery/gallery-safetymessaging.png" class="img-responsive" alt="4RP Safety Messaging: The new standard in safety messaging.">
+                </a>
+            </div>
         </div>
     </div>
 </section>            
