--- a/gallery/index.html
+++ b/gallery/index.html
@@ -29,7 +29,7 @@ title: "UserFrosting | Gallery"
                             Bloomington Tutors
                         </div>
                     </div>
-                    <img src="{{site.url}}/img/gallery/gallery-1-1.png" class="img-responsive" alt="Bloomington Tutors: One-on-one, on-campus tutoring at IU Bloomington.">
+                    <img src="{{site.url}}/img/gallery/gallery-bloomingtontutors.png" class="img-responsive" alt="Bloomington Tutors: One-on-one, on-campus tutoring at IU Bloomington.">
                 </a>
             </div>
             <div class="col-sm-4 portfolio-item">
@@ -59,7 +59,7 @@ title: "UserFrosting | Gallery"
                             Quiz Evolved
                         </div>
                     </div>
-                    <img src="{{site.url}}/img/gallery/gallery-2.png" class="img-responsive" alt="Quiz Evolved: The easy way for teachers to share questions with students.">
+                    <img src="{{site.url}}/img/gallery/gallery-quizevolved.png" class="img-responsive" alt="Quiz Evolved: The easy way for teachers to share questions with students.">
                 </a>
             </div>
             <div class="col-sm-4 portfolio-item">
@@ -72,6 +72,16 @@ title: "UserFrosting | Gallery"
                     <img src="{{site.url}}/img/gallery/gallery-safetymessaging.png" class="img-responsive" alt="4RP Safety Messaging: The new standard in safety messaging.">
                 </a>
             </div>
+            <div class="col-sm-4 portfolio-item">
+                <a href="https://artsho.ws/" rel="nofollow" class="portfolio-link">
+                    <div class="caption">
+                        <div class="caption-content">
+                            Artsho.ws
+                        </div>
+                    </div>
+                    <img src="{{site.url}}/img/gallery/gallery-artsho.png" class="img-responsive" alt="Artsho.ws: We are dedicated to the artist community.">
+                </a>
+            </div>            
         </div>
     </div>
 </section>            
