updating chat links

--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@ title: "UserFrosting | Modern, open source user management for PHP"
                         <p>If you're having trouble with installation, please see our <a href="{{site.url}}/troubleshooting">troubleshooting guide</a>.</p>
                         <p>If you feel comfortable with the basic concepts, and were able to install UserFrosting successfully, you can dive into the code with our <a href="{{site.url}}/tutorials">tutorials</a>.</p>
                         <p>If you have a problem that you've already tried to solve and you can ask a specific, focused question, consider asking on <a href="http://stackoverflow.com">Stack Overflow</a>.  Include the relevant code, and any errors reported in your PHP error log and/or browser console.  Tag your question with the <code>userfrosting</code> tag, and optionally with any tags specific to the relevant underlying technologies, such as <code>slim</code>, <code>twig</code>, <code>eloquent</code>, <code>composer</code>, etc.  You should also mention the version of UserFrosting that you are using.</p>
-                        <p>After posting a question on Stack Overflow, please link to it our <a href="https://gitter.im/userfrosting/UserFrosting">chat room</a>.  This will ensure that more people see it, and provide a place where we can discuss and help clarify your question.</p>
+                        <p>After posting a question on Stack Overflow, please link to it our <a href="https://chat.userfrosting.com/channel/support">chat room</a>.  This will ensure that more people see it, and provide a place where we can discuss and help clarify your question.</p>
                         
                         <h3>Tips for getting help</h3>
                         <ul>
@@ -569,7 +569,7 @@ title: "UserFrosting | Modern, open source user management for PHP"
                         <hr class="star-primary">
                     </div>
                     <div class="col-lg-10 col-lg-offset-1 text-left">
-                        <p>Yes, we'd love your help!  Join us in <a href="https://gitter.im/userfrosting/UserFrosting">chat</a> and we can talk about how you can become a contributor.</p>
+                        <p>Yes, we'd love your help!  Join us in <a href="https://chat.userfrosting.com/channel/support">chat</a> and we can talk about how you can become a contributor.</p>
                     </div>
                     <div class="col-lg-10 col-lg-offset-1 text-center">
                         <button type="button" class="btn btn-modal" data-dismiss="modal"><i class="fa fa-times"></i> Ok, got it!</button>
