new demo site link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: "UserFrosting | Modern, open source user management for PHP"
                 <a class="btn btn-outline btn-lg btn-block" href="https://github.com/userfrosting/UserFrosting/zipball/master"><i class="fa fa-download"></i> DOWNLOAD</a>
             </div>
             <div class="col-sm-4" >
-                <a class="btn btn-outline btn-lg btn-block" href="http://uf-demo.alexanderweissman.com/" target="_blank"><i class="fa fa-user"></i> &nbsp;&nbsp;&nbsp;DEMO&nbsp;&nbsp;&nbsp;</a>
+                <a class="btn btn-outline btn-lg btn-block" href="https://demo.userfrosting.com/" target="_blank"><i class="fa fa-user"></i> &nbsp;&nbsp;&nbsp;DEMO&nbsp;&nbsp;&nbsp;</a>
             </div>
             <div class="col-sm-4">
                 <a class="btn btn-outline btn-lg btn-block" href="https://github.com/userfrosting/UserFrosting" class="btn btn-outline btn-lg btn-block">&nbsp;<i class="fa fa-github-alt"></i> &nbsp;GITHUB&nbsp;&nbsp;</a>
