--- a/gallery/index.html
+++ b/gallery/index.html
@@ -81,7 +81,17 @@ title: "UserFrosting | Gallery"
                     </div>
                     <img src="{{site.url}}/img/gallery/gallery-artsho.png" class="img-responsive" alt="Artsho.ws: We are dedicated to the artist community.">
                 </a>
-            </div>            
+            </div>
+            <div class="col-sm-4 portfolio-item">
+                <a href="http://www.conjoint.online/" rel="nofollow" class="portfolio-link">
+                    <div class="caption">
+                        <div class="caption-content">
+                            Conjoint.ly
+                        </div>
+                    </div>
+                    <img src="{{site.url}}/img/gallery/gallery-conjointly.png" class="img-responsive" alt="Conjoint analysis made easy.">
+                </a>
+            </div>             
         </div>
     </div>
 </section>            
