until the new website is ready...

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@ title: "UserFrosting | Modern, open source user management for PHP"
         </div>
         <div class="row row-buttons">   
             <div class="col-sm-4">       
-                <a class="btn btn-outline btn-lg btn-block" href="https://github.com/userfrosting/UserFrosting/zipball/master"><i class="fa fa-download"></i> DOWNLOAD</a>
+                <a class="btn btn-outline btn-lg btn-block" href="https://learn.userfrosting.com/basics/installation"><i class="fa fa-download"></i> INSTALL</a>
             </div>
             <div class="col-sm-4" >
-                <a class="btn btn-outline btn-lg btn-block" href="https://demo.userfrosting.com/" target="_blank"><i class="fa fa-user"></i> &nbsp;&nbsp;&nbsp;DEMO&nbsp;&nbsp;&nbsp;</a>
+                <a class="btn btn-outline btn-lg btn-block" href="https://demo.userfrosting.com/" target="_blank"><i class="fa fa-user"></i> DEMO (0.3.1)&nbsp;&nbsp;&nbsp;</a>
             </div>
             <div class="col-sm-4">
                 <a class="btn btn-outline btn-lg btn-block" href="https://github.com/userfrosting/UserFrosting" class="btn btn-outline btn-lg btn-block">&nbsp;<i class="fa fa-github-alt"></i> &nbsp;GITHUB&nbsp;&nbsp;</a>
@@ -44,7 +44,7 @@ title: "UserFrosting | Modern, open source user management for PHP"
                 </p>
                 <p><strong>Userfrosting delivers.</strong></p>
                 <p>
-                    With some basic configuration and an easy-to-use installer, you'll be ready to create and manage user accounts in 5 minutes or less.  All you need is a web server running PHP 5.4 or greater, and a SQL database.
+                    With some basic configuration and an easy-to-use installer, you'll be ready to create and manage user accounts in 5 minutes or less.  All you need is a web server running PHP 5.6 or greater, and a SQL database.
                 </p>
                 <p class="faq-question">Who is UserFrosting meant for?</p>
                 <p>
