--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: main
-title: "UserFrosting | Modern, open source user management for PHP"
+title: "UserFrosting | Documentation for 0.3.x"
+description: "Documentation and tutorials for UserFrosting 0.3.x (deprecated)."
 ---
 
 <!-- Header -->
@@ -16,10 +17,10 @@ title: "UserFrosting | Modern, open source user management for PHP"
         </div>
         <div class="row row-buttons">   
             <div class="col-sm-4">       
-                <a class="btn btn-outline btn-lg btn-block" href="https://learn.userfrosting.com/basics/installation"><i class="fa fa-download"></i> INSTALL</a>
+                <a class="btn btn-outline btn-lg btn-block" href="http://v3.userfrosting.com/installation"><i class="fa fa-download"></i> INSTALL</a>
             </div>
             <div class="col-sm-4" >
-                <a class="btn btn-outline btn-lg btn-block" href="https://demo.userfrosting.com/" target="_blank"><i class="fa fa-user"></i> DEMO (0.3.1)&nbsp;&nbsp;&nbsp;</a>
+                <a class="btn btn-outline btn-lg btn-block" href="https://demo.userfrosting.com/" target="_blank"><i class="fa fa-user"></i> DEMO (v4)&nbsp;&nbsp;&nbsp;</a>
             </div>
             <div class="col-sm-4">
                 <a class="btn btn-outline btn-lg btn-block" href="https://github.com/userfrosting/UserFrosting" class="btn btn-outline btn-lg btn-block">&nbsp;<i class="fa fa-github-alt"></i> &nbsp;GITHUB&nbsp;&nbsp;</a>
